--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,8 +1,34 @@
+<!doctype html>
 <html>
-<head>
-	<title>Prueba</title>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Module2-solution</title>
+		<link rel="stylesheet" href="CSS/style.css">
+	</head>
 </head>
 <body> 
-<h1>Prueba numero 2</h1>
+	<header>
+		<h1 id="principal-title">Module 2 - Solution</h1>
+	</header>
+	<section class="c1">
+		<h1 class="title">section 1</h1>
+		<article>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?
+		</article>
+	</section>
+	<section class="c2">
+		<h1 class="title">section 2</h1>
+		<article>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?
+		</article>
+	</section>
+	<section class="c3">
+		<h1 class="title">section 3</h1>
+		<article>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?
+		</article>
+	</section>	
 </body>
+
 </html>
