--- a/index.html
+++ b/index.html
@@ -1,70 +1,28 @@
-<<<<<<< HEAD
 <!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Module2-solution</title>
-		<link rel="stylesheet" href="CSS/style.css">
-	</head>
-</head>
-<body> 
-	<header>
-		<h1 id="principal-title">Module 2 - Solution</h1>
-	</header>
-	<section class="c1">
-		<h1 class="title">section 1</h1>
-		<article>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?
-		</article>
-	</section>
-	<section class="c2">
-		<h1 class="title">section 2</h1>
-		<article>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?
-		</article>
-	</section>
-	<section class="c3">
-		<h1 class="title">section 3</h1>
-		<article>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?
-		</article>
-	</section>	
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-=======
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Module2-solution</title>
-		<link rel="stylesheet" href="CSS/style.css">
-	</head>
-</head>
-<body> 
-	<header>
-		<h1 id="principal-title">Module 2 - Solution</h1>
-	</header>
-	<section class="c1">
-		<h1 class="title">section 1</h1>
-		<article>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?
-		</article>
-	</section>
-	<section class="c2">
-		<h1 class="title">section 2</h1>
-		<article>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?
-		</article>
-	</section>
-	<section class="c3">
-		<h1 class="title">section 3</h1>
-		<article>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?
-		</article>
-	</section>	
-</body>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
->>>>>>> e3e038dd6b81555657a4ed210a5308038c7da606
+    <title>Bootstrap Starter Page</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+<body>
+
+  <h1>Hello Coursera!</h1>
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
 </html>
